src/objects/UserObject__c.object
<CustomObject>
    <fields>
        <fullName>About__c</fullName>
        <label>AboutMe</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>UserObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>User-{0000}</displayFormat>
        <label>UserNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>